# quickQues

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
eval/fixtures/: generate_synthetic_contract.py
profiles/: contract.yaml  document.yaml  pagefix-policy-tight.yaml  pagefix-policy.yaml
reference/: README.md  claude-vision-ocr.md  deepseek-v4-vision.md  llm-subscription-vs-api.md  rag-evaluation-metrics.md  rrf-fusion.md
scripts/: check.sh  install-hooks.sh
scripts/hooks/: pre-commit
src/jcontract/: __init__.py  cli.py  config.py  paths.py
src/jcontract/answer/: __init__.py  postprocess.py  prompt.py
src/jcontract/api/: __init__.py  dependencies.py  main.py  schemas.py
src/jcontract/api/routes/: __init__.py  ask.py  files.py  health.py  search.py
src/jcontract/eval/: __init__.py  compare.py  golden_cases.jsonl  metrics.py  runner.py
src/jcontract/impls/: __init__.py  _caption_shared.py  _claude_cli_runner.py  _ocr_cache_key.py  _page_classify.py  _page_geometry.py  _page_orient.py  _pagefix_policy.py  _pdfium_render.py  _policy_trace.py  _table_assemble.py  _table_detect.py  bge_reranker.py  bm25_index.py  claude_answerer.py  claude_cli_answerer.py  claude_cli_judge.py  claude_cli_vision_captioner.py  claude_cli_vision_parser.py  claude_vision_captioner.py  claude_vision_parser.py  codex_cli_answerer.py  deepseek_v4_parser.py  deepseek_vision_captioner.py  dict_regex_redactor.py  domain_profile_registry.py  fastembed_embedder.py  ollama_vision_captioner.py  openai_compat_answerer.py  pypdf_parser.py  qa_chunker.py  qdrant_store.py  rapidocr_parser.py  sqlite_ref_graph.py
src/jcontract/ingest/: __init__.py  batch.py  dispatch.py  pipeline.py
src/jcontract/interfaces/: __init__.py  answerer.py  chunker.py  domain_profile.py  embedding.py  judge.py  keyword.py  ocr.py  parser.py  redactor.py  ref_graph.py  reranker.py  schema.py  vector_store.py  vision.py
src/jcontract/retrieve/: __init__.py  hybrid.py
tests/: conftest.py  test_answerer.py  test_api_files.py  test_api_routes.py  test_batch.py  test_bge_reranker.py  test_caption_lane.py  test_caption_shared.py  test_chunker.py  test_chunker_generic.py  test_claude_cli_answerer.py  test_claude_cli_judge.py  test_claude_cli_runner.py  test_claude_cli_vision_captioner.py  test_claude_cli_vision_parser.py  test_claude_vision_captioner.py  test_claude_vision_parser.py  test_codex_cli_answerer.py  test_deepseek_v4_parser.py  test_deepseek_vision_captioner.py  test_dispatch.py  test_domain_profile.py  test_eval_compare.py  test_eval_metrics.py  test_indexing.py  test_ocr_cache_key.py  test_ocr_gallery.py  test_ocr_quality.py  test_ollama_vision_captioner.py  test_openai_compat_answerer.py  test_page_classify_v2.py  test_page_geometry.py  test_page_orient.py  test_pagefix_policy.py  test_parser.py  test_paths.py  test_pdfium_render.py  test_policy_trace.py  test_profile_wiring.py  test_rapidocr_parser.py  (+5 more)
tutorial/: 00-index.md  01-what-is-this-project.md  02-overall-flow.md  03-directory-structure.md  04-interface-and-impls.md  05-chunk-anatomy.md  06-pdf-parsing-and-ocr.md  07-chunking.md  08-embedding.md  09-vector-store.md  10-bm25-keyword.md  11-rrf-fusion.md  12-cross-encoder-reranker.md  13-ref-graph.md  14-answerer-and-citations.md  15-cli-walkthrough.md  16-evaluation.md  17-glossary.md
web/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
web/app/: page.test.tsx  page.tsx
web/app/pdf/[file]/: page.tsx
web/components/chat/: ChatInput.test.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  CitationChip.test.tsx  CitationChip.tsx  SuggestedQuestions.test.tsx  SuggestedQuestions.tsx
web/components/ui/: Button.test.tsx  Button.tsx  Card.tsx  Input.tsx
web/lib/: api-client.test.ts  api-client.ts
web/scripts/: check.sh
