[project]
name = "jcontract"
version = "0.1.0"
description = "Domain-agnostic document knowledge-base AI (production-style RAG) with page-level citations"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Seakon", email = "seakon@nanoveu.com" },
]
dependencies = [
    # PDF parsing — pypdf is pure-Python, no system deps. Text-only PDFs.
    "pypdf==5.1.0",
    # PDF -> image rendering for OCR (Phase 1.5). pypdfium2 ships pdfium
    # binary in wheels (no system poppler/cairo needed). Apache 2.0.
    "pypdfium2==5.8.0",
    # Embedding + Vector store — fastembed uses ONNX runtime, avoids torch
    # (saves ~2GB) and works on CPU. Pinned directly (not via the
    # qdrant-client[fastembed] extra) because qdrant-client 1.12.1 hard-pins
    # fastembed==0.3.6, which predates TextEmbedding.add_custom_model —
    # needed to register BAAI/bge-m3 dense. Our code imports fastembed
    # directly; the qdrant-client integration extra was never used.
    # [DECISION-ab3.22 dev-sprint v3 §13]
    "qdrant-client==1.12.1",
    "fastembed==0.8.0",
    # Keyword search (BM25)
    "rank-bm25==0.2.2",
    # Chinese tokenization for BM25 (jieba is the standard library)
    "jieba==0.42.1",
    # LLM API — primary answerer + Vision OCR
    "anthropic==0.40.0",
    # CLI
    "typer>=0.16,<1",
    # Structured logging (lightweight, optional but used by ingest/eval)
    "structlog==24.4.0",
    # Cross-encoder reranking (Phase 1.8 P1). bge-reranker-v2-m3 needs a
    # transformer forward pass per (query, chunk) pair — fastembed 0.3.6
    # (pinned by qdrant-client[fastembed]) only has bi-encoders. Pulls
    # torch + transformers (~2GB on disk); accepted per the 8-question
    # dep check documented at the top of src/jcontract/impls/bge_reranker.py.
    "sentence-transformers==5.5.1",
    "openai>=1.55,<2",
    # Offline OCR (E3, sub-sprint ssLC). `rapidocr` is the actively maintained
    # successor of the legacy `rapidocr-onnxruntime` package (frozen at 1.4.4,
    # last upload 2025-01); 3.x runs PP-OCRv5 ONNX models on CPU with zero
    # network calls after the one-time model download. Apache-2.0, ~15MB wheel.
    # [DECISION-ls.30 dev-sprint v4 §13]
    "rapidocr==3.8.2",
    # rapidocr 2.x+ moved its inference engines out of requires_dist — it
    # imports whichever engine package is installed at runtime. CPU
    # onnxruntime already arrives transitively via fastembed, but rapidocr's
    # hard runtime requirement must not hinge on another vendor's transitive
    # dep, so we declare it explicitly. CPU wheel only — onnxruntime-gpu
    # rejected for sm_120 (FORESHADOW-ls.2 investigation).
    "onnxruntime>=1.17,<2",
    # Table structure recognition (ssTB). SLANet-plus ONNX running on the
    # CPU onnxruntime we already ship; the only engine of the four
    # candidates with non-zero output on all 5 frozen sample table pages
    # (mean gold cell recall 0.69). 43KB pure-python wheel + one-time
    # ~7.5MB slanet-plus.onnx download; every transitive dep already
    # arrives via rapidocr/fastembed. Apache-2.0, OSV clean. Rejected:
    # img2table (cv2 namespace clash + 2/5 zero-output pages),
    # PP-StructureV3 (194.8MB wheel), pdfplumber/camelot (scanned PDFs
    # have no text layer). [DECISION-tt.20 dev-sprint v6 §13]
    "rapid-table==3.0.2",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.30,<1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff==0.13.3",
    "mypy==1.13.0",
    "pytest==8.3.4",
    # Generates the synthetic test PDF used by eval/ (Phase 1 prototype).
    # Real DEMO PDFs are image-only scans needing OCR (FORESHADOW Phase 1.5);
    # fpdf2 is dev-only and never imported by runtime code.
    "fpdf2==2.8.1",
    "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
jcontract = "jcontract.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jcontract"]

# ----- ruff: lint + format -----
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative starting ruleset; expand in later Sub-sprints with explicit DECISION.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (basic security)
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests use assert freely; bandit S101 is noise here.
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ----- mypy: strict typing -----
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# fpdf2 ships without type stubs and is only used by eval/fixtures/
# (test data generation, never imported by runtime code). Allow untyped.
[[tool.mypy.overrides]]
module = "fpdf"
ignore_missing_imports = true

# pypdfium2 wraps a C binary and has no py.typed marker as of 5.8.
# We use a thin surface (PdfDocument, page.render). Allow untyped imports.
[[tool.mypy.overrides]]
module = "pypdfium2"
ignore_missing_imports = true

# rapidocr ships no py.typed marker as of 3.8. We use a thin surface
# (RapidOCR(), OCRVersion enum, result .boxes/.txts). Allow untyped imports.
[[tool.mypy.overrides]]
module = ["rapidocr", "rapidocr.*"]
ignore_missing_imports = true

# rapid-table ships no py.typed marker as of 3.0.2 (verified: no marker in
# the installed wheel). Thin surface only: RapidTable(RapidTableInput(...)),
# ModelType enum, result .pred_htmls/.cell_bboxes/.logic_points.
[[tool.mypy.overrides]]
module = ["rapid_table", "rapid_table.*"]
ignore_missing_imports = true

# ----- pytest -----
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
